added reports for small data

--- a/API/resources/env.properties
+++ b/API/resources/env.properties
@@ -5,4 +5,4 @@ server.port=5001
 server.service=Yes
 
 [DatabaseConnection]
-database.address=Driver={SQL Server};Server=localhost\SQLEXPRESS;Database=Economy;Trusted_Connection=yes;uid=IMPAQ\pjag;pwd=
+database.address=DRIVER={ODBC Driver 17 for SQL Server};Server=localhost\SQLEXPRESS;Database=Economy;Trusted_Connection=yes;uid=IMPAQ\pjag;pwd=
